# genetic-neural-network

./: CMakeLists.txt  fontRenderer.cpp  fontRenderer.h  gfx.cpp  gfx.h  main.cpp  simulator.cpp  simulator.h
genetic/: agent.cpp  agent.h  gene.h  genome.cpp  genome.h  neuron.h  node.h  population.cpp  population.h  random.h  source.cpp  source.h  statistics.cpp  statistics.h  stimulus.h  world.cpp  world.h
window/: frame.cpp  frame.h  pane.cpp  pane.h
